# bitbucket-migration

./: 404.html  README.md  audit_bitbucket.py  index.html  mkdocs.yml  pyproject.toml  test_auth.py
.github/workflows/: docs-deploy.yml  pypi-publish.yml
attachment_upload/: index.html
checklists/post_migration/: index.html
checklists/pre_migration/: index.html
checklists/verification/: index.html
docs/: attachment_upload.md  index.md  migration_guide.md  post_migration_upload_guide.md  troubleshooting.md
docs/checklists/: post_migration.md  pre_migration.md  verification.md
docs/reference/: api_tokens.md  architecture.md  cli_reference.md  glossary.md  migration_attachments.md  migration_comments.md  migration_config.md  migration_details.md  migration_images.md  migration_issues.md  migration_links.md  migration_mentions.md  migration_milestones.md  migration_pull_requests.md  rate_limits.md  user_mapping.md
examples/: config.json
migration_guide/: index.html
reference/api_tokens/: index.html
reference/architecture/: index.html
reference/cli_reference/: index.html
reference/glossary/: index.html
reference/migration_attachments/: index.html
reference/migration_comments/: index.html
reference/migration_config/: index.html
reference/migration_details/: index.html
reference/migration_images/: index.html
reference/migration_issues/: index.html
reference/migration_links/: index.html
reference/migration_mentions/: index.html
search/: search_index.json
tests/: conftest.py
tests/unit/: test_auditor.py  (+27 more)
troubleshooting/: index.html
(+58 files in other folders)
